// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropZone rendering renders expected elements when editing is true 1`] = `
<div
  className="DropZone"
>
  <LabelLine
    htmlFor="random-id"
  />
  <button
    aria-describedby="random-id-helper"
    className="DropZone__content"
    id="random-id"
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    type="button"
  >
    <input
      onChange={[Function]}
      style={
        {
          "display": "none",
        }
      }
      type="file"
    />
    <div
      className="DropZone__uploaded"
    >
      <div>
        Editing hint
      </div>
      <SvgIcon
        className="DropZone__icon DropZone__icon--uploaded"
        icon={
          {
            "icon": [],
            "iconName": "file-lines",
            "prefix": "far",
          }
        }
      />
      <div
        className="DropZone__hint"
      >
        Uploaded hint
      </div>
    </div>
  </button>
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;

exports[`DropZone rendering renders expected elements when error is set 1`] = `
<div
  className="DropZone"
>
  <LabelLine
    htmlFor="random-id"
  />
  <button
    aria-describedby="random-id-error"
    className="DropZone__content DropZone__content--error"
    id="random-id"
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    type="button"
  >
    <input
      onChange={[Function]}
      style={
        {
          "display": "none",
        }
      }
      type="file"
    />
    <div
      className="DropZone__uploaded"
    >
      <div>
        "test-file.txt" attached.
      </div>
      <SvgIcon
        className="DropZone__icon DropZone__icon--uploaded"
        icon={
          {
            "icon": [],
            "iconName": "file-lines",
            "prefix": "far",
          }
        }
      />
      <div
        className="DropZone__hint"
      >
        Uploaded hint
      </div>
    </div>
  </button>
  <FieldError
    id="random-id-error"
    text="Drop error"
  />
</div>
`;

exports[`DropZone rendering renders expected elements when fileName is not set 1`] = `
<div
  className="DropZone TestClass"
>
  <LabelLine
    htmlFor="random-id"
    optional={true}
    text="Test"
  />
  <button
    aria-describedby="random-id-helper"
    className="DropZone__content"
    id="random-id"
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    type="button"
  >
    <input
      onChange={[Function]}
      style={
        {
          "display": "none",
        }
      }
      type="file"
    />
    <div
      className="DropZone__empty"
    >
      <div
        className="DropZone__hint"
      >
        Empty hint
      </div>
      <SvgIcon
        className="DropZone__icon DropZone__icon--empty"
        icon={
          {
            "icon": [],
            "iconName": "cloud-arrow-up",
            "prefix": "fas",
          }
        }
      />
    </div>
  </button>
  <FieldHelper
    id="random-id-helper"
    text="Helper text"
  />
</div>
`;

exports[`DropZone rendering renders expected elements when fileName is set 1`] = `
<div
  className="DropZone"
>
  <LabelLine
    htmlFor="random-id"
  />
  <button
    aria-describedby="random-id-helper"
    className="DropZone__content"
    id="random-id"
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    type="button"
  >
    <input
      onChange={[Function]}
      style={
        {
          "display": "none",
        }
      }
      type="file"
    />
    <div
      className="DropZone__uploaded"
    >
      <div>
        "test-file.txt" attached.
      </div>
      <SvgIcon
        className="DropZone__icon DropZone__icon--uploaded"
        icon={
          {
            "icon": [],
            "iconName": "file-lines",
            "prefix": "far",
          }
        }
      />
      <div
        className="DropZone__hint"
      >
        Uploaded hint
      </div>
    </div>
  </button>
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;

exports[`DropZone rendering renders expected elements when onDelete is set 1`] = `
<div
  className="DropZone"
>
  <LabelLine
    htmlFor="random-id"
  />
  <button
    aria-describedby="random-id-helper"
    className="DropZone__content"
    id="random-id"
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    type="button"
  >
    <input
      onChange={[Function]}
      style={
        {
          "display": "none",
        }
      }
      type="file"
    />
    <div
      className="DropZone__uploaded"
    >
      <div>
        Editing hint
      </div>
      <SvgIcon
        className="DropZone__icon DropZone__icon--uploaded"
        icon={
          {
            "icon": [],
            "iconName": "file-lines",
            "prefix": "far",
          }
        }
      />
      <div
        className="DropZone__hint"
      >
        Uploaded hint
      </div>
    </div>
  </button>
  <IconButton
    className="DropZone__delete"
    icon={
      {
        "icon": [],
        "iconName": "trash-can",
        "prefix": "far",
      }
    }
    id="random-id-delete"
    onClick={[MockFunction]}
    size="medium"
    tooltipPlacement="top"
    tooltipText="Delete"
    type="ghost"
  />
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;
